@@ -1,6 +1,8 @@
 2010-03-24	Olivier Bilodeau <obilodeau@inverse.ca>
 	* pf/lib/pf/vlan.pm: Refactoring pf::vlan according to review
 	- custom_getCorrectVlan renamed to get_normal_vlan
+	- Pass node_info hashref instead of individual node information to 
+	  get_normal_vlan()
 
 2010-03-23	Olivier Bilodeau <obilodeau@inverse.ca>
 	* pf/lib/pf/vlan.pm: Refactoring pf::vlan according to review
